# textadventuretest

./: tat.1  tat.cabal
src/: .tat.hs.swp  tat.hs  tat.lagda
src/TestAdventure/: ConditionChecks.hs  Descriptions.hs  Funky.lagda  Items.lagda  WYCT.lagda
src/TestAdventure/Functions/: Action.hs  Interface.hs  Miscellaneous.hs
src/TestAdventure/Functions/Action/: Crush.hs
src/TestAdventure/Messages/: Death.hs  Error.hs  Status.hs
src/VVXtAdventure/: Base.hs  Base.lagda  Funky.lagda  RenegadesOfFunc.hs
