Cabal-version: 2.4

Name:          vvx-textadventuretest
Version:       0.1.0.0
Synopsis:      Dumb text adventure game
Description:   _Text Adventure Test_, otherwise known as "TAT", is a
               stupid text adventure game which is created to
               demonstrate that fun things can be created with Haskell.

License:       BSD-3-Clause
License-file:  LICENSE

Author:        Varik Valefor
Maintainer:    varikvalefor@aol.com
Copyright:     (c) Varik Valefor 2021.

Category:      Games

Stability:     unstable

Source-repository head
  type:     git
  location: https://github.com/varikvalefor/textadventuretest

executable tat
  main-is:          tat.hs

  ghc-options:      -haddock -threaded -O2
  other-modules:    TestAdventure.ConditionChecks,
                    TestAdventure.Functions.Action,
                    TestAdventure.Functions.Interface,
                    TestAdventure.Functions.Miscellaneous,
                    TestAdventure.Messages.Death,
                    TestAdventure.Messages.Error,
                    TestAdventure.Messages.Status,
                    VVXtAdventure.RenegadesOfFunc
                    VVXtAdventure.Base

  build-depends:    base ^>=4.14.1.0, split

  hs-source-dirs:   src
  default-language: Haskell2010
